Fixed perfometer handling of too long texts

--- a/web/htdocs/status.css
+++ b/web/htdocs/status.css
@@ -189,30 +189,30 @@ table.data tr.data td.perfometer {
     vertical-align: middle;
 }
 
+td.perfometer > a {
+    display: block;
+    position: relative;
+}
+
 td.perfometer div.content {
-   position: relative;
-   top: 0px;
-   left: 1px;
    width: 120px;
-   height: 0px;
-   float: left;
    z-index: 20;
 }
 
 td.perfometer div.title {
-   position: relative;
-   top: 5px;
-   left: 0px;
-   width: 120px;
-   height: 0px;
-   text-align: center;
-   white-space: nowrap;
-   float: left;
-   z-index: 40;
+    position: absolute;
+    top: 1px;
+    overflow: hidden;
+    line-height: 22px;
+    margin: 0 3px;
+    width: 114px;
+    text-align: center;
+    white-space: nowrap;
+    z-index: 40;
 }
 
 td.perfometer img.glass {
-   position: relative;
+   position: absolute;
    top: 1px;
    left: 2px;
    width: 120px;
